--- a/index.html
+++ b/index.html
@@ -1,45 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lavith Orders</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            text-align: center;
-            padding: 40px;
-        }
-        .box {
-            background: white;
-            padding: 25px;
-            border-radius: 12px;
-            width: 90%;
-            max-width: 400px;
-            margin: auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.2);
-        }
-        button {
-            background: green;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            font-size: 18px;
-            border-radius: 8px;
-            cursor: pointer;
-            width: 100%;
-            margin-top: 15px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lavith Orders</title>
+
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background: #f2f2f2;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    header {
+        background: #008CFF;
+        color: white;
+        padding: 20px;
+        font-size: 26px;
+        font-weight: bold;
+    }
+    .service-box {
+        background: white;
+        width: 90%;
+        margin: 15px auto;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        text-align: left;
+    }
+    img {
+        width: 100%;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+    h2 {
+        margin: 0 0 10px;
+    }
+    .order-btn {
+        display: block;
+        width: 100%;
+        background: #25D366;
+        color: white;
+        padding: 12px;
+        text-align: center;
+        border-radius: 10px;
+        margin-top: 10px;
+        font-size: 18px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+</style>
+
 </head>
 <body>
-    <div class="box">
-        <h2>Lavith Orders</h2>
-        <p>Click below to order on WhatsApp!</p>
-        <button onclick="window.location.href='https://wa.me/918209175051?text=Hello%20I%20want%20to%20order'">
-            Order on WhatsApp
-        </button>
-    </div>
+
+<header>Lavith Orders</header>
+
+<!-- Service 1 -->
+<div class="service-box">
+    <img src="https://i.imgur.com/04iV3uW.jpeg">
+    <h2>Phone Covers & Accessories</h2>
+    <p>Custom printed cases, tempered glass, chargers & more.</p>
+    <p><b>Price:</b> ₹99 – ₹299</p>
+    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Phone%20Accessories">Order on WhatsApp</a>
+</div>
+
+<!-- Service 2 -->
+<div class="service-box">
+    <img src="https://i.imgur.com/9CWvvwO.jpeg">
+    <h2>Tech Gadget Selling</h2>
+    <p>Earphones, Smartwatches, Power banks, Bluetooth neckbands.</p>
+    <p><b>Price:</b> ₹149 – ₹999</p>
+    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Tech%20Gadgets">Order on WhatsApp</a>
+</div>
+
+<!-- Service 3 -->
+<div class="service-box">
+    <img src="https://i.imgur.com/Sa7mOV4.jpeg">
+    <h2>Basic Home Services</h2>
+    <p>Small repairs, install help, cleaning help — done by students.</p>
+    <p><b>Price:</b> ₹49 – ₹149</p>
+    <a class="order-btn" href="https://wa.me/918209175051?text=I%20need%20Home%20Service">Book a Service</a>
+</div>
+
+<!-- Service 4 -->
+<div class="service-box">
+    <img src="https://i.imgur.com/lmM0M1K.jpeg">
+    <h2>Online Help Service</h2>
+    <p>Assignment help, notes printing, PDF making, small editing.</p>
+    <p><b>Price:</b> ₹10 – ₹50</p>
+    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Online%20Help">Order Now</a>
+</div>
+
 </body>
 </html>
