--- a/index.html
+++ b/index.html
@@ -1,97 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lavith Orders</title>
-
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #f2f2f2;
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LAMEZONE - Tech Help</title>
+    <style>
+      body {
         margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-    header {
-        background: #008CFF;
+        font-family: Arial, sans-serif;
+        background: #0a0a0a;
         color: white;
+      }
+
+      header {
+        background: linear-gradient(90deg, #00eaff, #0077ff);
         padding: 20px;
-        font-size: 26px;
+        text-align: center;
+        font-size: 30px;
         font-weight: bold;
-    }
-    .service-box {
-        background: white;
-        width: 90%;
-        margin: 15px auto;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        text-align: left;
-    }
-    img {
-        width: 100%;
-        border-radius: 10px;
-        margin-bottom: 10px;
-    }
-    h2 {
-        margin: 0 0 10px;
-    }
-    .order-btn {
-        display: block;
-        width: 100%;
-        background: #25D366;
-        color: white;
-        padding: 12px;
+        letter-spacing: 2px;
+      }
+
+      .hero {
+        padding: 60px 20px;
         text-align: center;
-        border-radius: 10px;
-        margin-top: 10px;
+      }
+
+      .hero h1 {
+        font-size: 50px;
+        color: #00eaff;
+      }
+
+      .hero p {
+        font-size: 20px;
+        margin-top: -10px;
+        color: #cfcfcf;
+      }
+
+      .services {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        padding: 30px;
+      }
+
+      .card {
+        background: #111;
+        padding: 20px;
+        border-radius: 14px;
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+        text-align: center;
+        border: 1px solid #00eaff;
+      }
+
+      .card h3 {
+        color: #00eaff;
+      }
+
+      .order-btn {
+        margin-top: 15px;
+        background: #00eaff;
+        color: #000;
+        padding: 10px 20px;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
         font-size: 18px;
-        text-decoration: none;
-        font-weight: bold;
-    }
-</style>
+      }
 
-</head>
-<body>
+      .order-btn:hover {
+        background: #0077ff;
+      }
 
-<header>Lavith Orders</header>
+      footer {
+        margin-top: 40px;
+        padding: 20px;
+        text-align: center;
+        background: #050505;
+        color: #999;
+      }
+    </style>
 
-<!-- Service 1 -->
-<div class="service-box">
-    <img src="https://i.imgur.com/04iV3uW.jpeg">
-    <h2>Phone Covers & Accessories</h2>
-    <p>Custom printed cases, tempered glass, chargers & more.</p>
-    <p><b>Price:</b> ₹99 – ₹299</p>
-    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Phone%20Accessories">Order on WhatsApp</a>
-</div>
+    <script>
+      function order(name) {
+        const phone = "8209175051";
+        const msg = `I want help in: ${name}`;
+        const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
+        window.open(url, "_blank");
+      }
+    </script>
+  </head>
 
-<!-- Service 2 -->
-<div class="service-box">
-    <img src="https://i.imgur.com/9CWvvwO.jpeg">
-    <h2>Tech Gadget Selling</h2>
-    <p>Earphones, Smartwatches, Power banks, Bluetooth neckbands.</p>
-    <p><b>Price:</b> ₹149 – ₹999</p>
-    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Tech%20Gadgets">Order on WhatsApp</a>
-</div>
+  <body>
+    <header>LAMEZONE</header>
 
-<!-- Service 3 -->
-<div class="service-box">
-    <img src="https://i.imgur.com/Sa7mOV4.jpeg">
-    <h2>Basic Home Services</h2>
-    <p>Small repairs, install help, cleaning help — done by students.</p>
-    <p><b>Price:</b> ₹49 – ₹149</p>
-    <a class="order-btn" href="https://wa.me/918209175051?text=I%20need%20Home%20Service">Book a Service</a>
-</div>
+    <section class="hero">
+      <h1>Fast Tech Help</h1>
+      <p>We fix issues • Provide guidance • Set up devices • and more</p>
+    </section>
 
-<!-- Service 4 -->
-<div class="service-box">
-    <img src="https://i.imgur.com/lmM0M1K.jpeg">
-    <h2>Online Help Service</h2>
-    <p>Assignment help, notes printing, PDF making, small editing.</p>
-    <p><b>Price:</b> ₹10 – ₹50</p>
-    <a class="order-btn" href="https://wa.me/918209175051?text=I%20want%20Online%20Help">Order Now</a>
-</div>
+    <section class="services">
+      <div class="card">
+        <h3>Mobile Setup</h3>
+        <p>App install, cleaning, settings, backup</p>
+        <button class="order-btn" onclick="order('Mobile Setup')">Get Help</button>
+      </div>
 
-</body>
+      <div class="card">
+        <h3>Tech Problem Fix</h3>
+        <p>Any small tech problem solved fast</p>
+        <button class="order-btn" onclick="order('Tech Problem Fix')">Get Help</button>
+      </div>
+
+      <div class="card">
+        <h3>WhatsApp Help</h3>
+        <p>Backup, restore, hidden settings</p>
+        <button class="order-btn" onclick="order('WhatsApp Help')">Get Help</button>
+      </div>
+
+      <div class="card">
+        <h3>Wi‑Fi / Internet Help</h3>
+        <p>Router setup, speed boost, fixes</p>
+        <button class="order-btn" onclick="order('WiFi / Internet Help')">Get Help</button>
+      </div>
+    </section>
+
+    <footer>
+      © 2025 LAMEZONE — All Rights Reserved
+    </footer>
+  </body>
 </html>
+
