--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html><html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,124 +9,119 @@
         font-family: Arial, sans-serif;
         background: #0a0a0a;
         color: white;
-      }
+      }header {
+    background: linear-gradient(90deg, #00eaff, #0077ff);
+    padding: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
 
-      header {
-        background: linear-gradient(90deg, #00eaff, #0077ff);
-        padding: 20px;
-        text-align: center;
-        font-size: 30px;
-        font-weight: bold;
-        letter-spacing: 2px;
-      }
+  .hero {
+    padding: 60px 20px;
+    text-align: center;
+  }
 
-      .hero {
-        padding: 60px 20px;
-        text-align: center;
-      }
+  .hero h1 {
+    font-size: 50px;
+    color: #00eaff;
+  }
 
-      .hero h1 {
-        font-size: 50px;
-        color: #00eaff;
-      }
+  .hero p {
+    font-size: 20px;
+    margin-top: -10px;
+    color: #cfcfcf;
+  }
 
-      .hero p {
-        font-size: 20px;
-        margin-top: -10px;
-        color: #cfcfcf;
-      }
+  .services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 30px;
+  }
 
-      .services {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 30px;
-      }
+  .card {
+    background: #111;
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+    text-align: center;
+    border: 1px solid #00eaff;
+  }
 
-      .card {
-        background: #111;
-        padding: 20px;
-        border-radius: 14px;
-        box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
-        text-align: center;
-        border: 1px solid #00eaff;
-      }
+  .card h3 {
+    color: #00eaff;
+  }
 
-      .card h3 {
-        color: #00eaff;
-      }
+  .order-btn {
+    margin-top: 15px;
+    background: #00eaff;
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+  }
 
-      .order-btn {
-        margin-top: 15px;
-        background: #00eaff;
-        color: #000;
-        padding: 10px 20px;
-        border-radius: 8px;
-        border: none;
-        cursor: pointer;
-        font-size: 18px;
-      }
+  .order-btn:hover {
+    background: #0077ff;
+  }
 
-      .order-btn:hover {
-        background: #0077ff;
-      }
+  footer {
+    margin-top: 40px;
+    padding: 20px;
+    text-align: center;
+    background: #050505;
+    color: #999;
+  }
+</style>
 
-      footer {
-        margin-top: 40px;
-        padding: 20px;
-        text-align: center;
-        background: #050505;
-        color: #999;
-      }
-    </style>
+<script>
+  function order(name) {
+    const phone = "918209175051";
+    const msg = `I want help in: ${name}`;
+    const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
+    window.open(url, "_blank");
+  }
+</script>
 
-    <script>
-      function order(name) {
-        const phone = "8209175150";
-        const msg = `I want help in: ${name}`;
-        const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
-        window.open(url, "_blank");
-      }
-    </script>
-  </head>
+  </head>  <body>
+    <header>LAMEZONE</header><section class="hero">
+  <h1>Fast Tech Help</h1>
+  <p>We fix issues • Provide guidance • Set up devices • and more</p>
+</section>
 
-  <body>
-    <header>LAMEZONE</header>
+<section class="services">
+  <div class="card">
+    <h3>Mobile Setup</h3>
+    <p>App install, cleaning, settings, backup</p>
+    <button class="order-btn" onclick="order('Mobile Setup')">Get Help</button>
+  </div>
 
-    <section class="hero">
-      <h1>Fast Tech Help</h1>
-      <p>We fix issues • Provide guidance • Set up devices • and more</p>
-    </section>
+  <div class="card">
+    <h3>Tech Problem Fix</h3>
+    <p>Any small tech problem solved fast</p>
+    <button class="order-btn" onclick="order('Tech Problem Fix')">Get Help</button>
+  </div>
 
-    <section class="services">
-      <div class="card">
-        <h3>Mobile Setup</h3>
-        <p>App install, cleaning, settings, backup</p>
-        <button class="order-btn" onclick="order('Mobile Setup')">Get Help</button>
-      </div>
+  <div class="card">
+    <h3>WhatsApp Help</h3>
+    <p>Backup, restore, hidden settings</p>
+    <button class="order-btn" onclick="order('WhatsApp Help')">Get Help</button>
+  </div>
 
-      <div class="card">
-        <h3>Tech Problem Fix</h3>
-        <p>Any small tech problem solved fast</p>
-        <button class="order-btn" onclick="order('Tech Problem Fix')">Get Help</button>
-      </div>
+  <div class="card">
+    <h3>Wi‑Fi / Internet Help</h3>
+    <p>Router setup, speed boost, fixes</p>
+    <button class="order-btn" onclick="order('WiFi / Internet Help')">Get Help</button>
+  </div>
+</section>
 
-      <div class="card">
-        <h3>WhatsApp Help</h3>
-        <p>Backup, restore, hidden settings</p>
-        <button class="order-btn" onclick="order('WhatsApp Help')">Get Help</button>
-      </div>
+<footer>
+  © 2025 LAMEZONE — All Rights Reserved
+</footer>
 
-      <div class="card">
-        <h3>Wi‑Fi / Internet Help</h3>
-        <p>Router setup, speed boost, fixes</p>
-        <button class="order-btn" onclick="order('WiFi / Internet Help')">Get Help</button>
-      </div>
-    </section>
-
-    <footer>
-      © 2025 LAMEZONE — All Rights Reserved
-    </footer>
   </body>
-</html>
-
+        </html>
