--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     }
   </style>  <script>
     function order(service) {
-      const phone = "918209175150"; // Your WhatsApp number
+      const phone = "9182091 75150"; // Your WhatsApp number
       const msg = `Hello, I need help with: ${service}`;
       const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
       window.open(url, "_blank");
