--- a/index.html
+++ b/index.html
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>LAMEZONE - Home</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>LAMEZONE — Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</nav>
+  <header class="header">
+    <div class="logo">LAMEZONE</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<div class="hero">
-    <h1 class="title">LAMEZONE</h1>
-    <a class="btn" href="services.html">Explore Services</a>
-</div>
+  <section class="hero">
+    <div class="left">
+      <h1>Trusted digital & tech services — fast and affordable</h1>
+      <p>We help with phone setup, website, server setup, and more. Order on WhatsApp in one click.</p>
+      <a class="cta" href="services.html">Explore Services</a>
+    </div>
+
+    <div class="promo">
+      <h3>Why choose LAMEZONE?</h3>
+      <p>Verified student team • Fast replies • Transparent prices</p>
+      <p style="margin-top:12px"><strong>Contact:</strong> <a href="https://wa.me/918209175150" target="_blank">+91 8209175150</a></p>
+    </div>
+  </section>
+
+  <section class="features">
+    <div class="feature"><h4>Trusted</h4><p>1000+ satisfied users</p></div>
+    <div class="feature"><h4>Fast</h4><p>Same-day for many services</p></div>
+    <div class="feature"><h4>Secure</h4><p>Order via WhatsApp safely</p></div>
+  </section>
+
+  <section class="services-wrap">
+    <h2 style="max-width:1100px;margin:18px auto;padding:0 20px">Popular Services</h2>
+    <div class="service-card" style="max-width:1100px;margin:0 auto">
+      <div class="info">
+        <h3>Website Creation</h3>
+        <p>Modern one-page or small business websites. Fast delivery.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Website%20Creation&price=499&desc=One-page%20responsive%20site">Details</a>
+      </div>
+    </div>
+
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Phone Setup & Backup</h3>
+        <p>WhatsApp backup, app install, backup restore.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Phone%20Setup&price=99&desc=Setup%20apps%20and%20backup">Details</a>
+      </div>
+    </div>
+
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Minecraft Server Setup</h3>
+        <p>Bedrock/Java basic setup with plugins and whitelist.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Minecraft%20Server%20Setup&price=199&desc=Server%20setup%20and%20plugins">Details</a>
+      </div>
+    </div>
+
+  </section>
+
+  <footer>
+    © 2025 LAMEZONE — Built by Lavith23
+  </footer>
 
 </body>
 </html>
