--- a/services.html
+++ b/services.html
@@ -1,26 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>LAMEZONE - Services</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Services — LAMEZONE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</nav>
+  <header class="header">
+    <div class="logo">LAMEZONE</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<h1 style="text-align:center; margin-top:40px;">Our Services</h1>
+  <main class="services-wrap">
+    <h2 style="margin:10px 20px">All Services</h2>
 
-<ul style="max-width:700px; margin:auto; font-size:22px; line-height:40px;">
-    <li>🔧 Tech Help</li>
-    <li>📱 Phone Setup</li>
-    <li>🛠 Troubleshooting</li>
-    <li>🌐 Small Website Setup</li>
-</ul>
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Website Creation</h3>
+        <p>One-page responsive website with contact & WhatsApp ordering.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Website%20Creation&price=499&desc=One-page%20responsive%20site">See details</a>
+      </div>
+    </div>
 
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Graphics & Logo Design</h3>
+        <p>Thumbnails, logos, banners for your YouTube or business.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Logo%20Design&price=149&desc=Logo%20and%20thumbnail%20design">See details</a>
+      </div>
+    </div>
+
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Phone Setup & Backup</h3>
+        <p>App install, WhatsApp backup, storage clean.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Phone%20Setup&price=99&desc=App%20install%2C%20backup">See details</a>
+      </div>
+    </div>
+
+    <div class="service-card" style="max-width:1100px;margin:18px auto">
+      <div class="info">
+        <h3>Minecraft Server Setup</h3>
+        <p>Server creation for Bedrock/Java with plugins.</p>
+      </div>
+      <div>
+        <a class="btn-primary" href="service-detail.html?service=Minecraft%20Server%20Setup&price=199&desc=Server%20setup%20with%20plugins">See details</a>
+      </div>
+    </div>
+
+  </main>
+
+  <footer>© 2025 LAMEZONE</footer>
 </body>
 </html>
