Revise About page layout and content
Updated the structure and content of the About page, including improved header and footer sections.

--- a/About.html
+++ b/About.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>About Us - LAMEZONE</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>About — LAMEZONE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</nav>
+  <header class="header">
+    <div class="logo">LAMEZONE</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<h1 style="text-align:center; margin-top:40px;">About LAMEZONE</h1>
+  <main style="max-width:900px;margin:30px auto;padding:0 20px">
+    <h1>About LAMEZONE</h1>
+    <p>We are a team of students providing tech help—phone setup, website creation, and game server support. Fast, affordable, and friendly.</p>
 
-<p style="max-width:700px; margin:auto; font-size:20px; line-height:35px; text-align:center;">
-We are 9 students offering tech help services.  
-Our team leader username: <b>Lavith23</b>.  
-We work honestly and fast.
-</p>
+    <h3 style="margin-top:14px">Trust & Safety</h3>
+    <ul>
+      <li>✅ Transparent prices</li>
+      <li>✅ Quick WhatsApp support</li>
+      <li>✅ Money-back policy for unsatisfied orders</li>
+    </ul>
+  </main>
 
+  <footer>© 2025 LAMEZONE</footer>
 </body>
 </html>
