Revamp Contact.html structure and content
Updated the Contact page layout and content.

--- a/Contact.html
+++ b/Contact.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Contact - LAMEZONE</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Contact — LAMEZONE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-</nav>
+  <header class="header">
+    <div class="logo">LAMEZONE</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="about.html">About</a>
+    </nav>
+  </header>
 
-<h1 style="text-align:center; margin-top:40px;">Contact Us</h1>
+  <main style="max-width:700px;margin:40px auto;padding:0 20px">
+    <h1>Contact</h1>
+    <p>WhatsApp us directly:</p>
+    <p><a class="btn-primary" href="https://wa.me/918209175150" target="_blank">Chat on WhatsApp</a></p>
 
-<div style="text-align:center; margin-top:30px;">
-    <a class="btn" href="https://wa.me/918209175150?text=Hello%20LAMEZONE%20Team%2C%20I%20want%20to%20order%20a%20service!"
-       target="_blank">WhatsApp Now</a>
-</div>
+    <h3 style="margin-top:18px">Frequently Asked</h3>
+    <p><strong>Q:</strong> How long does delivery take? <br><strong>A:</strong> Many services delivered same-day; complex jobs take 1–3 days.</p>
+  </main>
 
+  <footer>© 2025 LAMEZONE</footer>
 </body>
 </html>
