--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="promo">
       <h3>Why choose LAMEZONE?</h3>
       <p>Verified student team • Fast replies • Transparent prices</p>
-      <p style="margin-top:12px"><strong>Contact:</strong> <a href="https://wa.me/+91 8209175150" target="_blank">+91 8209175150</a></p>
+      <p style="margin-top:12px"><strong>Contact:</strong> <a href="https://wa.me/08209175150" target="_blank">+91 8209175150</a></p>
     </div>
   </section>
 
