--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <main style="max-width:700px;margin:40px auto;padding:0 20px">
     <h1>Contact</h1>
     <p>WhatsApp us directly:</p>
-    <p><a class="btn-primary" href="https://wa.me/918209175150" target="_blank">Chat on WhatsApp</a></p>
+    <p><a class="btn-primary" href="https://wa.me/+91 8209175150" target="_blank">Chat on WhatsApp</a></p>
 
     <h3 style="margin-top:18px">Frequently Asked</h3>
     <p><strong>Q:</strong> How long does delivery take? <br><strong>A:</strong> Many services delivered same-day; complex jobs take 1–3 days.</p>
