--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
         <p>Server creation for Bedrock/Java with plugins.</p>
       </div>
       <div>
-        <a class="btn-primary" href="service-detail.html?service=Minecraft%20Server%20Setup&price=199&desc=Server%20setup%20with%20plugins">See details</a>
+        <a class="btn-primary" href="service-detail.html?service=online%20pdf%20notes&price=199&desc=all%20subject%20notes%20some all">See details</a>
       </div>
     </div>
 
