Update service link for Minecraft Server Setup

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Bedrock/Java basic setup with plugins and whitelist.</p>
       </div>
       <div>
-        <a class="btn-primary" href="service-detail.html?service=Minecraft%20Server%20Setup&price=199&desc=Server%20setup%20and%20plugins">Details</a>
+        <a class="btn-primary" href="service-detail.html?service=online%20pdf%20notes&price=199&desc=all%20subject%20notes%20some all">Details</a>
       </div>
     </div>
 
