--- a/services.html
+++ b/services.html
@@ -52,8 +52,8 @@
 
     <div class="service-card" style="max-width:1100px;margin:18px auto">
       <div class="info">
-        <h3>Minecraft Server Setup</h3>
-        <p>Server creation for Bedrock/Java with plugins.</p>
+        <h3>online pdf notes service </h3>
+        <p>all subjects nots photo pdf premium pdf.</p>
       </div>
       <div>
         <a class="btn-primary" href="service-detail.html?service=online%20pdf%20notes&price=199&desc=Server%20all%20subjects%20notes-available">See details</a>
