--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 <body>
 
   <header class="header">
+  <div class="left-header">
     <div class="logo">LAMEZONE</div>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+
+    <!-- small animated banner just under the logo -->
+    <div class="live-banner" aria-hidden="true">
+      <div class="live-dot"></div>
+      <div class="live-text">Orders are live now — place your order on WhatsApp</div>
+    </div>
+  </div>
+
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
   </header>
 
   <section class="hero">
