--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <div class="service-card" style="max-width:1100px;margin:18px auto">
       <div class="info">
-        <h3>Minecraft Server Setup</h3>
-        <p>Bedrock/Java basic setup with plugins and whitelist.</p>
+        <h3>online pdf notes </h3>
+        <p>all subjects notes in premium and low at same price .</p>
       </div>
       <div>
         <a class="btn-primary" href="service-detail.html?service=online%20pdf%20notes&price=199&desc=all%20subject%20notes%20some all">Details</a>
