--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="promo">
       <h3>Why choose LAMEZONE?</h3>
       <p>Verified student team • Fast replies • Transparent prices</p>
-      <p style="margin-top:12px"><strong>Contact:</strong> <a href="https://wa.me/+91 82091 75051" target="_blank">+91 82091 75051</a></p>
+      <p style="margin-top:12px"><strong>Contact:</strong> <a href="https://wa.me/8209175051" target="_blank">8209175051</a></p>
     </div>
   </section>
 
